@startuml movies

class Customer {
- String name;
- List<Rental> rentals;

+ Costumer(String name)
+ void addRental(Rental rental)
+ String getName()
+ String statement()
- double getTotalCharge()
- int getTotalFrequentRenterPoints()
- double calculateTotal(ToDoubleFunction<Rental> mapper)
}

class Rental {
- Movie movie;
- int daysRented;

+ Rental(Movie movie, int daysRented)
+ double getCharge()
+ int getFrequentRenterPoints()
+ String getMovieTitle()
+ String getStatementLine()
}

abstract class Movie {
- String title;

+ Movie(String title)
+ double getCharge(int daysRented)
+ int getFrequentRenterPoints(int daysRented)
+ String getTitle()
+ Movie newRelease(String title)
+ Movie regular(String title)
+ Movie children(String title)
}

class RegularMovie {
{static}- double CHARGE = 2.0;
{static}- double EXTRA CHARGE = 1.5;
{static}- final int DAYS RENTED THRESHOLD = 2;
+ double getCharge(int daysRented)
}
class ChildrenMovie {
{static}- double CHARGE = 1.5;
{static}- double EXTRA CHARGE = 1.5;
{static}- int DAYS RENTED THRESHOLD = 3;
+ double getCharge(int daysRented)
}
class NewReleaseMovie {
{static}- double CHARGE = 3;
{static}- double EXTRA CHARGE = 1;
{static}- int DAYS RENTED THRESHOLD = 2;
+ double getCharge(int daysRented)
+ int getFrequentRenterPoints(int daysRented)
}

Customer o-down-> Rental
Rental -down-> Movie
Movie <|-down- RegularMovie
Movie <|-down- ChildrenMovie
Movie <|-down- NewReleaseMovie

@enduml

